# novel-agent

./: .gitignore  BUILD.md  Cargo.toml  README.md  config.example.yaml  pre-upload.sh  sandbox_verify.py  scan.sh  upload.sh
core/: Cargo.toml
core/examples/: basic.rs  emergence_demo.rs  genuine_closed_loop_demo.rs  industrial_discovery_demo.rs  rapier_world_demo.rs  true_world_demo.rs
core/src/: lib.rs
core/src/bus/: mod.rs
core/src/causal_full/: mod.rs
core/src/correction/: mod.rs
core/src/eight_gates/: mod.rs
core/src/emergence/: causal.rs  concept.rs  hypothesis.rs  indicators.rs  mod.rs  real_physics.rs  sandbox.rs  sensor.rs
core/src/ethics/: mod.rs
core/src/ewc/: mod.rs
core/src/existential/: mod.rs
core/src/genuine_concept/: mod.rs
core/src/genuine_emergence/: mod.rs
core/src/industrial/: mod.rs
core/src/kalman/: mod.rs
core/src/lif/: mod.rs
core/src/memory_io/: mod.rs
core/src/motivation/: mod.rs
core/src/nlp/: mod.rs
core/src/plasticity/: mod.rs
core/src/plasticity_lif/: mod.rs
core/src/predictive_coding/: mod.rs
core/src/rapier_bridge/: mod.rs
core/src/reasoning/: mod.rs
core/src/reflection/: mod.rs
core/src/sandbox_genuine/: mod.rs
core/src/true_world_model/: mod.rs
core/src/workspace/: mod.rs
core/src/world/: mod.rs
core/tests/: mvp_integration.rs
docs/: ARCHITECTURE.md  INDUSTRIAL_PHYSICS_FULL_INTEGRATION.md  INDUSTRIAL_PHYSICS_INTEGRATION.md  MVP_EXPAND_PLAN.md  RECEIVED_MODULES.md
examples/: basic_run.py
memory/: Cargo.toml
memory/src/: lib.rs
novels/: .gitignore
physics/: Cargo.toml
physics/src/: lib.rs
python/: Cargo.toml
python/src/: lib.rs
