[workspace]
resolver = "2"
members = [
    "core",
    "memory",
    "physics",
    "python",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "Apache-2.0"
authors = ["Mavis <Mavis@local>"]

[workspace.dependencies]
# 基础
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
parking_lot = "0.12"
once_cell = "1.19"
thiserror = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"

# 时间
chrono = { version = "0.4", features = ["serde"] }

# 加密 / 哈希
sha2 = "0.10"
hex = "0.4"

# 数学
nalgebra = { version = "0.32", features = ["serde"] }
rand = "0.8"

# 数值计算
ndarray = "0.15"
ndarray-stats = "0.5"

# 工业级物理引擎
rapier3d = "0.14"

# 异步
tokio = { version = "1.36", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# FFI
libc = "0.2"

# 测试 / 性能
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"

# Python 绑定
pyo3 = { version = "0.21", features = ["extension-module", "abi3-py38"] }

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
strip = true

[profile.dev]
opt-level = 1
debug = true
