[package]
name = "quantum-python"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "群星 A.I. OS - Python 胶水层(PyO3 绑定,暴露给 AGI)"

[lib]
name = "quantum_python"
crate-type = ["cdylib"]

[dependencies]
quantum-core = { path = "../core" }
quantum-physics = { path = "../physics" }
pyo3.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
